# songer

./: .env.example  .gitignore  .prettierignore  AGENTS.md  README.md  SECRETS.md  app.json  package.json  pnpm-lock.yaml  requirements.txt  setup-github-rules.sh
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: ai_task.md  bug_report.md  feature_request.md
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci-integration.yml  ci-model.yml  deploy-staging.yml  eas-preview.yml  eas-production.yml  issue-to-agent.yml  labeler.yml  maestro-ios-e2e.yml  secrets-check.yml
.windsurf/rules/: code.md
apps/mobile/: app.json  eas.json  package.json
apps/mobile/.maestro/: smoke.yaml
apps/mobile/app/: _layout.tsx  home.tsx  index.tsx  settings.tsx
apps/mobile/src/Shared/components/atoms/: AppButton.tsx
apps/mobile/src/components/: YoutubePlayerModal.tsx
apps/mobile/src/config/: integrations.ts
apps/mobile/src/features/onboarding/components/: OnboardingScreen.tsx
apps/mobile/src/features/onboarding/data/: slides.ts
apps/mobile/src/features/onboarding/hooks/: useOnboardingSlides.ts
apps/mobile/src/features/recognition/: types.ts
apps/mobile/src/features/recognition/components/: RecentResultsList.tsx  RecognitionStatusMessage.tsx  SongMatchCard.tsx  YouTubeModal.tsx
apps/mobile/src/features/recognition/hooks/: useSongRecognition.ts
apps/mobile/src/features/recognition/services/: shazamRecognitionService.ts
apps/mobile/src/services/: musicRecognition.ts
backend/: README.md  pyproject.toml
backend/songer_backend/: __init__.py  main.py  settings.py
backend/songer_backend/routers/: health.py
backend/tests/: test_health.py
codex/: README.md
codex/prompts/: explorer.md  implementer.md  integrator.md  reviewer-gate.md  team-lead.md
codex/skills/obra/subagent-driven-development/: SKILL.md
codex/skills/react-development/: SKILL.md
docs/testing/: mobile-mcp-spike.md
frontend/: jest.config.js  package.json
frontend/__tests__/: Home.test.tsx
frontend/src/app/: layout.tsx  page.tsx
model/: README.md  hum_search.py  pyproject.toml
model/songer_model/: __init__.py  cli.py  dtw_matching.py  model_client.py  pitch_extraction.py
model/tests/: __init__.py  test_placeholder.py
supabase/migrations/: README.md
tools/mobile-mcp-poc/: README.md  run-mobile-mcp-poc.sh
